feat: create swagger request for password reset
