# src/routes/recovery-router.ts
@@ -1,9 +1,9 @@
-import { sendRecoveryRequest } from "controllers"
+import { passwordReset, sendRecoveryRequest } from "controllers"
 import express from "express"
 
 const recoveryRouter = express.Router()
 
 recoveryRouter.post("/recovery", sendRecoveryRequest)
-recoveryRouter.put("/reset" )
+recoveryRouter.put("/reset", passwordReset )
 
 export default recoveryRouter
